--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 									<h3 class="major">Deep Learning Acceleration Assistant Reasercher</h3>
 										<h4 class="major">Intelligent Sensory Microsystems Lab - University of Toronto</h4>
 								<span class="image main"><img src="images/ISM.jpg" alt="" /></span>
-								<p>• 
-								</br>• 
-								</br>• </p>
+								<p>•  Researched memristor based neural network architectures
+								</br>•  My research focuses on implementing compressed DNNs on the memristor crossbar to improve the accuracy of ex-situ trained neural networks while accounting for non-idealities.</p>
 									<h3 class="major">Hardware Development Lab Assistant</h3>
 										<h4 class="major">ventureLAB, Markham</h4>
 								<span class="image main"><img src="images/Vlab.jpg" alt="" /></span>
@@ -67,12 +66,12 @@
 
 						<!-- School -->
 							<article id="School">
-								<h2 class="major">School</h2>
+								<h2 class="major">University</h2>
 									<h3 class="major">Computer Engineering</h3>
 										<h4 class="major">University of Toronto, St. George campus</h4>
 								<span class="image main"><img src="images/ece.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
+								<p>• Data Science Team • Dean’s list • Uoft Scholar</p>
+								<h3 class="major">Extracurricular</h2>
 									<h3 class="major">UAV Software Developer</h3>
 								<span class="image main"><img src="images/utat.jpg" alt="" /></span>
 								<p>•  Built detection, classification library using openCV and Pytorch in Python.
@@ -83,26 +82,19 @@
 						<!-- Projects -->
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
+									<h3 class="major">CityMapper - C++</h3>
+								<span class="image main"><img src="images/cM.png" alt="" /></span>
+								<p>•fully functional GiS similar to google maps, included a solution to the TSP.</p>
+									<h3 class="major">3D Maze - C</h3>
+								<span class="image main"><img src="images/maze.png" alt="" /></span>
+								<p>• 3D first person maze game designed to be played on the DE1-SoC dev. Board.</p>
+									<h3 class="major">Graphical Asteroid game + AI - C++</h3>
+								<span class="image main"><img src="images/GE.png" alt="" /></span>
+								<p></p>
+									<h3 class="major">Reversi/Othello bot - C</h3>
+								<p>• achieved 1st place in a department wide competition</p>
 									<h3 class="major">Deep Learning Acceleration Assistant Reasercher</h3>
-								<span class="image main"><img src="images/ISM.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
-									<h3 class="major">Deep Learning Acceleration Assistant Reasercher</h3>
-								<span class="image main"><img src="images/ISM.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
-									<h3 class="major">Deep Learning Acceleration Assistant Reasercher</h3>
-								<span class="image main"><img src="images/ISM.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
-									<h3 class="major">Deep Learning Acceleration Assistant Reasercher</h3>
-								<span class="image main"><img src="images/ISM.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
-									<h3 class="major">Deep Learning Acceleration Assistant Reasercher</h3>
-								<span class="image main"><img src="images/ISM.jpg" alt="" /></span>
-								<p></p>
-								<p></p>
+								<p>• Rearranges WAV speech file to match what's written in a text file</p>
 							</article>
 
 						<!-- Contact -->
