--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 								<p></p>
 									<h3 class="major">Reversi/Othello bot - C</h3>
 								<p>• achieved 1st place in a department wide competition</p>
-									<h3 class="major">Deep Learning Acceleration Assistant Reasercher</h3>
+									<h3 class="major">Speech rearranger - Python</h3>
 								<p>• Rearranges WAV speech file to match what's written in a text file</p>
 							</article>
 
