--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 						<!-- Projects -->
 							<article id="Projects">
 								<h2 class="major">Projects</h2>
+									<h3 class="major">Chessboard_mapper - Python</h3>
+								<span class="image main"><img src="images/chess.png" alt="" /></span>
+								<p>•Converts physical chessbaord image to digital image.</p>
 									<h3 class="major">CityMapper - C++</h3>
 								<span class="image main"><img src="images/cM.png" alt="" /></span>
 								<p>•fully functional GiS similar to google maps, included a solution to the TSP.</p>
